--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/calculator.css" />
+    <link rel="stylesheet" href="/Project-Calculator/calculator.css" />
     <title>How to make a Calculator using HTML CSS JavaScript</title>
 </head>
 <script>
